--- a/404.html
+++ b/404.html
@@ -6,16 +6,19 @@
     </title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!" />
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="screenshot.jpg" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
     <script
       src="https://kit.fontawesome.com/d300c2ea15.js"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -36,14 +39,17 @@
         <h1 class="error-page-title">Uh oh...</h1>
         <h2>It would seem that you've gotten a little lost!</h2>
         <p>
-          <a
-            href="work.html"
-            >Click here to get back on the right path</a
-          >
+          <a href="work.html">Click here to get back on the right path</a>
         </p>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
+          <li><a href="#" class="custom-navigation">Instagram</a></li>
+          <li>
+            <a href="mailto:james@magnetude.com" class="custom-navigation"
+              >Email</a
+            >
+          </li>
         </ul>
       </footer>
     </section>
