--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -44,16 +44,9 @@
             box.
           </p>
           <p class="project-description">
-            When high school juniors and detention buddies Pandora “Andy” and
-            Epimetheus “Theo” decide to avenge the unfair suspension of
-            Prometheus “Prince” (Theo’s brother) they only plan to enact
-            childish vandalism upon the principal's office after hours. They
-            don’t expect to stumble across a strange boombox in Mr. Z’s office
-            and surely don’t expect to turn it on accidentally. When a sudden
-            string of strange deaths around the quiet neighbourhood of Olympus
-            abruptly takes place after their discovery, Andy and Theo are forced
-            to take action - whether they want to or not - and put a lid on this
-            evil they seem to have unleashed.
+            This retelling follows high school juniors Andy “Pandora” and Theo
+            “Epimetheus” as they investigate a strange series of deaths
+            connected to the unsettling boombox they uncovered
           </p>
         </div>
         <ul class="project-navigation">
@@ -72,7 +65,7 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/TT/TTanimation.gif"
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_1_80s_pandoras_box_retelling.jpg"
             width="1920"
             height="1080"
             alt="A description of the image"
@@ -80,7 +73,7 @@
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-pose-sheet.jpg"
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_2_story.jpg"
             width="1920"
             height="1080"
             alt="A description of the image"
@@ -88,7 +81,7 @@
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-expression-sheet.jpg"
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_3_characterlineup.jpg"
             width="1920"
             height="1080"
             alt="A description of the image"
@@ -96,7 +89,47 @@
         </div>
         <div class="project-image">
           <img
-            src="assets/TT/sophia-spanos-mcgill-pandoras-box-80s-character-design-rendered-character-pandora.jpg"
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_4_80s_pandora_character_design.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_5_80s_epimetheus_character_design.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_6_80s_boombox_character_design.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_7_80s_pandora_expression_sheet.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_8_80s_pandora_pose_sheet.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_9_80s_pandora_render_sheet.jpg"
             width="1920"
             height="1080"
             alt="A description of the image"
