--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   </header>
   <ul class="about">
     <li class="about-item-1">
-      <div class="about-image"><img src="assets/about/self-portrait.svg" width="800" height="800" alt="Your Photo">
+      <div class="about-image"><img src="assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg" width="1000" height="1000" alt="Your Photo">
       </div>
     </li>
     <li class="about-item-2">
