--- a/about.html
+++ b/about.html
@@ -16,13 +16,13 @@
   <header class="hero-header">
     <ul class="branding-navigation">
       <li><a href="work.html" class="custom-navigation">Work</a></li>
-      <li class="logo"><a href="index.html"><img src="assets/branding-images/logo.svg" /></a></li>
+      <li class="logo"><a href="index.html"><img src="assets/branding-images/SophLogo2024.svg" /></a></li>
       <li><a href="about.html" class="custom-navigation">About</a></li>
     </ul>
   </header>
   <ul class="about">
     <li class="about-item-1">
-      <div class="about-image"><img src="assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg" width="1000" height="1000" alt="Your Photo">
+      <div class="about-image"><img src="assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg" width="800" height="800" alt="Your Photo">
       </div>
     </li>
     <li class="about-item-2">
@@ -39,22 +39,56 @@
     </li>
     <li class="about-item-3">
       <h2>Contact &amp; Social</h2>
-      <ul class="socials-list">
-        <li class="social-item"><a href="#">Insta</a></li>
-        <li class="social-item"><a href="#">LinkedIn</a></li>
-        <li class="social-item"><a href="#">Behance</a></li>
-      </ul>
-    </li>
-    <li class="about-item-4">
-      <p><a href="#top">Smooth scroll to the top</a></p>
-      <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by James Neufeld.</p>
-    </li>
-  </ul>
-  </ul>
-  <footer class="hero-footer">
-    <ul class="hero-footer-navigation">
-      <li><a href="#" class="custom-navigation">Instagram</a></li>
-      <li><a href="mailto:james@magnetude.com" class="custom-navigation">Email</a></li>
+        <ul class="global-footer">
+      <li class="footer-item-1">
+        <h2>About Me</h2>
+        <p>
+          I'm a Vancouver-based illustrator who focusses on visual development
+          and animation.
+        </p>
+        <a href="about.html"> Find out more!</a>
+      </li>
+      <li class="footer-item-2">
+        <h2>Awards &amp; Recognition</h2>
+        <ul class="awards-list">
+          <li class="award-item">
+            <a
+              href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
+              >Honourable mention for the RGD Quake award for creative
+              innovation (2022)</a
+            >
+          </li>
+          <li class="award-item">
+            <a
+              href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
+              >Student Spotlight</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-3">
+        <h2>Contact &amp; Social</h2>
+        <ul class="socials-list">
+          <li class="social-item">
+            <a href="https://instagram.com/sophspanart/" target="_blank"
+              >Insta</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-4">
+        <p><a href="#top">Smooth scroll to the top</a></p>
+        <p class="fineprint">
+          &copy; 2020-2024. Hand crafted with
+          <span class="heart">❤</span>
+          by Sophia Spanos McGill.
+        </p>
+      </li>
     </ul>
   </footer>
 </body>
