--- a/about.html
+++ b/about.html
@@ -26,69 +26,41 @@
       </div>
     </li>
     <li class="about-item-2">
-      <h2>About Creative Portfolio!</h2>
-      <p>Clone this project from <a
-          href="https://github.com/jamesdneufeld/portfolio-2022">github.com/jamesdneufeld/portfolio-2022</a>.</p>
-      <h3>Testimonials</h3>
-      <p>&lsquo; I'm a Vancouver-based illustrator and animation nerd. I have a knack
+      <h2>Hey there!</h2>
+      <p>I'm a Vancouver-based illustrator and animation nerd. I have a knack
         for visualizing concepts, idea generation and shape language. If
         there’s anything I love more than art, it’s stories. I strive to
         create narratives wherever possible, crafting a funny recounting of an
         event for her friends, writing story concepts in coffee shops,
         shooting the occasional short film and doodling little comics.</p>
+      <h3>Testimonials</h3>
+      <p>&lsquo; </p>
     </li>
     <li class="about-item-3">
       <h2>Contact &amp; Social</h2>
-        <ul class="global-footer">
-      <li class="footer-item-1">
-        <h2>About Me</h2>
-        <p>
-          I'm a Vancouver-based illustrator who focusses on visual development
-          and animation.
-        </p>
-        <a href="about.html"> Find out more!</a>
-      </li>
-      <li class="footer-item-2">
-        <h2>Awards &amp; Recognition</h2>
-        <ul class="awards-list">
-          <li class="award-item">
-            <a
-              href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
-              >Honourable mention for the RGD Quake award for creative
-              innovation (2022)</a
-            >
-          </li>
-          <li class="award-item">
-            <a
-              href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
-              >Student Spotlight</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li class="footer-item-3">
-        <h2>Contact &amp; Social</h2>
-        <ul class="socials-list">
-          <li class="social-item">
-            <a href="https://instagram.com/sophspanart/" target="_blank"
-              >Insta</a
-            >
-          </li>
-          <li class="social-item">
-            <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
-              >LinkedIn</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
-        <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by Sophia Spanos McGill.
-        </p>
-      </li>
+      <ul class="socials-list">
+        <li class="social-item">
+          <a href="https://instagram.com/sophspanart/" target="_blank"
+            >Insta</a
+          >
+        </li>
+        <li class="social-item">
+          <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+            >LinkedIn</a
+          >
+        </li>
+      </ul>
+    </li>
+    <li class="about-item-4">
+      <p><a href="#top">Smooth scroll to the top</a></p>
+      <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by James Neufeld.</p>
+    </li>
+  </ul>
+  </ul>
+  <footer class="hero-footer">
+    <ul class="hero-footer-navigation">
+      <li><a href="#" class="custom-navigation">Instagram</a></li>
+      <li><a href="mailto:james@magnetude.com" class="custom-navigation">Email</a></li>
     </ul>
   </footer>
 </body>
