--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -37,7 +37,7 @@
       <aside class="project-aside">
         <div class="project-info">
           <h1 class="project-title">Prophecy of the Phoenix</h1>
-          <p class="project-description">
+          <p class="project-summary">
             Character design and world building for a steampunk and roman
             crossover world
           </p>
@@ -78,16 +78,12 @@
           />
         </div>
         <div class="project-image">
-          <span class="large-emoji-placeholder">🌼</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🌵</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">✨</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🕷</span>
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_story_02.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
         </div>
       </main>
     </div>
