photos for potp

--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -85,6 +85,30 @@
             alt="A description of the image"
           />
         </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_art_08.jpg.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_development_thumbnail_09.jpg.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_colour_10.jpg.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
       </main>
     </div>
     <ul class="global-footer">
