updating p4! all optimized images in

--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -109,6 +109,46 @@
             alt="A description of the image"
           />
         </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_characters_03.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_priest_character_concept_art_04.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_pigeoneer_character_concept_art_05.jpg.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_paladin_character_concept_art_06.jpg.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_character_concept_art_07.jpg.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
       </main>
     </div>
     <ul class="global-footer">
