--- a/work.html
+++ b/work.html
@@ -67,6 +67,7 @@
             <figure>
               <img
                 src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_1_80s_pandoras_box_retelling.jpg"
+                class="fade-in-photo"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
@@ -85,6 +86,7 @@
             <figure>
               <img
                 src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg"
+                class="fade-in-photo"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
