image anim final

--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
             <figure>
               <img
                 src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg"
-                class="fade-in-photo"
+                class="image-animation"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
