--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
             <figure>
               <img
                 src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_1_80s_pandoras_box_retelling.jpg"
-                class="fade-in-photo"
+                class="image-animation"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
@@ -103,6 +103,7 @@
             <figure>
               <img
                 src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_01_heroimage.jpg"
+                class="image-animation"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
@@ -121,6 +122,7 @@
             <figure>
               <img
                 src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_heroillustration_01.jpg"
+                class="image-animation"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
