updating visual styles

--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
       </header>
       <div class="hero-headline-wrapper">
         <h3>THE ART OF</h3>
-        <h1>SOPHIA SPANOS MCGILL</h1>
+        <h1 class=>SOPHIA SPANOS MCGILL</h1>
       </div>
       <footer class="hero-footer">
         <ul class="hero-footer-navigation">
@@ -64,10 +64,9 @@
       <section class="portfolio">
         <ul class="grid">
           <li class="work-page-grid-item">
-            <figure>
+            <figure class="image-work-page">
               <img
-                src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_1_80s_pandoras_box_retelling.jpg"
-                class="image-animation"
+                src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_3_characterlineup.jpg"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
@@ -83,7 +82,7 @@
             </a>
           </li>
           <li class="work-page-grid-item">
-            <figure>
+            <figure class="image-work-page">
               <img
                 src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg"
                 class="image-animation"
@@ -100,9 +99,9 @@
             </a>
           </li>
           <li class="work-page-grid-item">
-            <figure>
+            <figure class="image-work-page">
               <img
-                src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_01_heroimage.jpg"
+                src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_013_establishingvisual.jpg"
                 class="image-animation"
                 width="1920"
                 height="1080"
@@ -119,9 +118,9 @@
             </a>
           </li>
           <li class="work-page-grid-item">
-            <figure>
+            <figure class="image-work-page">
               <img
-                src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_heroillustration_01.jpg"
+                src="assets/POTP/sophiaspanosmcgill_PROPHECYOFTHEPHOENIX_roman_steampunk_phoenix_city_concept_art_08.jpg.jpg"
                 class="image-animation"
                 width="1920"
                 height="1080"
@@ -184,7 +183,6 @@
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
           &copy; 2020-2024. Hand crafted with
           <span class="heart">❤</span>
