--- a/work.html
+++ b/work.html
@@ -62,6 +62,7 @@
 
     <main class="work-wrapper">
       <section class="portfolio">
+        <h1>MY WORK</h1>
         <ul class="grid">
           <li class="work-page-grid-item">
             <figure class="image-work-page">
@@ -70,8 +71,6 @@
                 width="1920"
                 height="1080"
                 alt="Describe your project"
-                border-radius:
-                25px;
               />
             </figure>
             <a href="p1pthetemptation-1.html">
@@ -183,6 +182,7 @@
         </ul>
       </li>
       <li class="footer-item-4">
+
         <p class="fineprint">
           &copy; 2020-2024. Hand crafted with
           <span class="heart">❤</span>
