background image and making progress!

--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
   </head>
 
   <body class="work-page">
-    <section class="animated-gradient">
+    <section class="background-hero-image">
       <header class="hero-header">
         <ul class="branding-navigation">
           <li>
