--- a/work.html
+++ b/work.html
@@ -197,7 +197,7 @@
 
     <div class="flier">
       <img
-        src="assets/branding-images/FLOATINGICON.svg"
+        src=""
         alt="Describe your image"
       />
     </div>
