fixing the hero image

--- a/work.html
+++ b/work.html
@@ -146,7 +146,7 @@
           I'm a Vancouver-based illustrator who focusses on visual development
           and animation.
         </p>
-        <a href="about.html"> Find out more!</a>
+        <a href="about.html"> Still curious?</a>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
