--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
   <body class="holding-page">
     <div class="holding-page-wrapper">
       <a href="work.html">
-        <figure class="logo">
-          <img src="assets/branding-images/SophLogo2024.svg" alt="alt text" />
-        </figure>
-        <h1 class="holding-page-title">come walk a mile in my shoes</h1>
+        <h1 class="holding-page-title">Sophia is loading...</h1>
       </a>
     </div>
     <div class="holding-page-footer">
