--- a/p1pthetemptation-1.html
+++ b/p1pthetemptation-1.html
@@ -39,14 +39,9 @@
       <aside class="project-aside">
         <div class="project-info">
           <h1 class="project-title">The Temptation</h1>
-          <p class="project-summary">
-            Character development for an 80’s retelling of the myth of Pandora’s
-            box.
-          </p>
           <p class="project-description">
-            This retelling follows high school juniors Andy “Pandora” and Theo
-            “Epimetheus” as they investigate a strange series of deaths
-            connected to the unsettling boombox they uncovered
+            The Temptation is a character design concept of an 80’s retelling of
+            the myth of Pandora’s box
           </p>
         </div>
         <ul class="project-navigation">
