--- a/p2regulusrex.html
+++ b/p2regulusrex.html
@@ -37,18 +37,10 @@
       <aside class="project-aside">
         <div class="project-info">
           <h1 class="project-title">Regulus Rex</h1>
-          <h2 class="project-summary">
-            Character and weapon design of an underwater medieval turtle kingdom
-          </h2>
           <p class="project-description">
-            The kingdom of Rex is a quiet one. Ruled over by a fair and just
-            ruler, Regulus, the land has only known peace. Then, one day, a
-            foreign empress arrives at the castle gates, demanding the return of
-            a sacred object - claiming it as her ancestor's and accusing the Rex
-            family of having stolen it. All eyes turn to Regulus. Will he make
-            the right choice? Or will his insistence on honouring tradition,
-            abiding by history and living in entitlement risk the very turtles
-            he had vowed to protect?
+            Regulus Rex is a worldbuilding exercise and story concept that fuses
+            medieval aesthetics with the local freshwater turtle species of
+            North America
           </p>
         </div>
 
