--- a/p4prophecyofthephoenix.html
+++ b/p4prophecyofthephoenix.html
@@ -37,21 +37,9 @@
       <aside class="project-aside">
         <div class="project-info">
           <h1 class="project-title">Prophecy of the Phoenix</h1>
-          <p class="project-summary">
-            Character design and world building for a steampunk and roman
-            crossover world
-          </p>
           <p class="project-description">
-            The gods of old are gone. Having disappeared without a trace after
-            an earth-shattering and culture-destroying disagreement, the world
-            was thrust into a dark age. The faiths of the different gods grow
-            corrupt without their proper guidance, hostility runs deep, and the
-            threat of an all-out war draws closer. When a pigeoneer, a priest
-            and a paladin accidentally release/revive/rescue the long-lost
-            phoenix goddess of the sun, Eldur, they set into motion a prophecy
-            with the potential to mend old wounds and secure peace. Will they
-            overcome their differences and bring about an age of enlightenment?
-            Or will they fall victim to the same mistakes as their ancestors?
+            Prophecy of the Phoenix is a story concept that revolves around a
+            Phoenix goddess and combines steampunk and ancient Roman visuals
           </p>
         </div>
 
