--- a/work.html
+++ b/work.html
@@ -42,7 +42,6 @@
               />
             </a>
           </li>
-
           <li>
             <a href="about.html" class="custom-navigation">ABOUT</a>
           </li>
@@ -62,12 +61,12 @@
 
     <main class="work-wrapper">
       <section class="portfolio">
-        <h1>MY WORK</h1>
         <ul class="grid">
           <li class="work-page-grid-item">
             <figure class="image-work-page">
               <img
                 src="assets/TT/sophiaspanosmcgill_THETEMPTATION_Page_3_characterlineup.jpg"
+                class="image-animation"
                 width="1920"
                 height="1080"
                 alt="Describe your project"
