--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -1,163 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <title>Free Creative Portfolio Template: Mar 2024 Version | Project Page</title>
-  <meta name="description"
-    content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="./styles/style.css">
-</head>
-
-<body class="project-2">
-  <header class="hero-header">
-    <ul class="branding-navigation">
-      <li><a href="work.html" class="custom-navigation">Work</a></li>
-      <li class="logo"><a href="index.html"><img src="assets/branding-images/SophLogo2024.svg" /></a></li>
-      <li><a href="about.html" class="custom-navigation">About</a></li>
-    </ul>
-  </header>
-  <div class="project-wrapper">
-    <aside class="project-aside">
-      <div class="project-info">
-        <h1 class="project-title">Handlebars</h1>
-        <p class="project-description">Character design, prop design and storyboards</p>
-        <p class="project-description">One summer, sudden friends and the innocence of youth. When a girl from far away visits the enigmatic and cryptic town of Bartreng, a friendship blooms between her and a local girl. Joined by their love of biking, they set off to enjoy the summer of a lifetime. Unbeknownst to them, neither of them will be the same again 
-      </div>
-      <ul class="project-navigation">
-        <li class="arrow"><a href="p4prophecyofthephoenix.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
-        </li>
-        <li class="arrow"><a href="p2regulusrex.html" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a></li>
-      </ul>
-    </aside>
-    <main class="project-details">
-      <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_01_heroimage.jpg" width="1920" height="1080"
-        alt="A description of the image"></div>
-      <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_02_story.jpg" width="1920" height="1080"
-          alt="A description of the image"></div>
-     <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_03_characters.jpg" width="1920" height="1080"
-            alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_04_characterdevelopment.jpg" width="1920" height="1080"
-              alt="A description of the image"></div>
-        <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_05_samexpressionsheet.jpg" width="1920" height="1080"
-                alt="A description of the image"></div>
-      <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_06_samcharacterturnaround.jpg" width="1920" height="1080"
-                  alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_07_noraexpressionsheet.jpg" width="1920" height="1080"
-                    alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_08_noraturnaround.jpg" width="1920" height="1080"
-                      alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_09_objectsheet.jpg" width="1920" height="1080"
-                        alt="A description of the image"></div>
-        <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_010_storyboards1.jpg" width="1920" height="1080"
-                          alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_011_storyboards2.jpg" width="1920" height="1080"
-                            alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_012_storyboards3.jpg" width="1920" height="1080"
-                              alt="A description of the image"></div>
-       <div class="project-image"><img src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_013_establishingvisual.jpg" width="1920" height="1080"
-                                alt="A description of the image"></div>
-    </main>
-  </div>
-  <ul class="global-footer">
-    <li class="footer-item-1">
-      <h2>About Me</h2>
-      <p>
-        I'm a Vancouver-based illustrator and animation nerd. I have a knack
-        for visualizing concepts, idea generation and shape language. If
-        there’s anything I love more than art, it’s stories. I strive to
-        create narratives wherever possible, crafting a funny recounting of an
-        event for her friends, writing story concepts in coffee shops,
-        shooting the occasional short film and doodling little comics.
-      </p>
-    </li>
-    <li class="footer-item-2">
-      <h2>Awards &amp; Recognition</h2>
-      <ul class="awards-list">
-        <li class="award-item">
-          <a
-            href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
-            >Honourable mention for the RGD Quake award for creative
-            innovation (2022)</a
-          >
-        </li>
-        <li class="award-item">
-          <a
-            href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
-            >Student Spotlight</a
-          >
-        </li>
-      </ul>
-      <h2>Selected Works</h2>
-      <ul class="footer-nav-list">
-        <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-        <li class="footer-nav-item">
-          <a href="p1pthetemptation-1.html">The Temptation</a>
-        </li>
-        <li class="footer-nav-item">
-          <a href="p2regulusrex.html">Regulus Rex</a>
-        </li>
-        <li class="footer-nav-item">
-          <a href="p3handlebars.html">Handlebars</a>
-        </li>
-        <li class="footer-nav-item">
-          <a href="p4prophecyofthephoenix.html">Prophecy of the Phoenix</a>
-        </li>
-        <li class="footer-nav-item"><a href="about.html">About</a></li>
-      </ul>
-    </li>
-    <li class="footer-item-3">
-      <h2>Contact &amp; Social</h2>
-      <ul class="socials-list">
-        <li class="social-item">
-          <a href="https://instagram.com/sophspanart/" target="_blank"
-            >Insta</a
-          >
-        </li>
-        <li class="social-item">
-          <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
-            >LinkedIn</a
-          >
-        </li>
-      </ul>
-    </li>
-    <li class="footer-item-4">
-      <p><a href="#top">Smooth scroll to the top</a></p>
-      <p class="fineprint">
-        &copy; 2020-2024. Hand crafted with
-        <span class="heart">❤</span>
-        by Sophia Spanos McGill.
-      </p>
-    </li>
-  </ul>
-
-  <div id="myID" class="bottomMenu hide">
-    <a href="#">From the top</a>
-  </div>
-
-  <div class="flier">
-    <img
-      src="assets/branding-images/smiley-face.svg"
-      alt="Describe your image"
+  <head>
+    <title>
+      Free Creative Portfolio Template: Mar 2024 Version | Project Page
+    </title>
+    <meta
+      name="description"
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
     />
-  </div>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-  <script>
-    myID = document.getElementById("myID");
+  <body class="project-2">
+    <header class="hero-header">
+      <ul class="branding-navigation">
+        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="logo">
+          <a href="index.html"
+            ><img src="assets/branding-images/SophLogo2024.svg"
+          /></a>
+        </li>
+        <li><a href="about.html" class="custom-navigation">About</a></li>
+      </ul>
+    </header>
+    <div class="project-wrapper">
+      <aside class="project-aside">
+        <div class="project-info">
+          <h1 class="project-title">Handlebars</h1>
+          <p class="project-description">
+            Handlebars is the visual development for a short animation concept
+          </p>
+        </div>
 
-    var myScrollFunc = function () {
-      var y = window.scrollY;
-      if (y >= 800) {
-        myID.className = "bottomMenu show";
-      } else {
-        myID.className = "bottomMenu hide";
-      }
-    };
+        <ul class="project-navigation">
+          <li class="arrow">
+            <a href="p2regulusrex.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-left fa-2x"></i
+            ></a>
+          </li>
+          <li class="arrow">
+            <a href="p4prophecyofthephoenix.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-right fa-2x"></i
+            ></a>
+          </li>
+        </ul>
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_01_heroimage.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_02_story.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_03_characters.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_04_characterdevelopment.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_05_samexpressionsheet.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_06_samcharacterturnaround.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_07_noraexpressionsheet.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_08_noraturnaround.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_09_objectsheet.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_010_storyboards1.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_011_storyboards2.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_012_storyboards3.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/HNDB/sophiaspanosmcgill_HANDLEBARSPage_013_establishingvisual.jpg"
+            width="1920"
+            height="1080"
+            alt="A description of the image"
+          />
+        </div>
+      </main>
+    </div>
+    <ul class="global-footer">
+      <li class="footer-item-1">
+        <h2>About Me</h2>
+        <p>
+          I'm a Vancouver-based illustrator and animation nerd. I have a knack
+          for visualizing concepts, idea generation and shape language. If
+          there’s anything I love more than art, it’s stories. I strive to
+          create narratives wherever possible, crafting a funny recounting of an
+          event for her friends, writing story concepts in coffee shops,
+          shooting the occasional short film and doodling little comics.
+        </p>
+      </li>
+      <li class="footer-item-2">
+        <h2>Awards &amp; Recognition</h2>
+        <ul class="awards-list">
+          <li class="award-item">
+            <a
+              href="https://rgd.ca/hiring-designers/award-winners/2022-rgd-student-awards-winners"
+              >Honourable mention for the RGD Quake award for creative
+              innovation (2022)</a
+            >
+          </li>
+          <li class="award-item">
+            <a
+              href="https://www.ideaschoolofdesign.com/stories/2022/3/walking-into-the-classroom-feels-magical-for-first-year-student-sophia-spanos-mcgill-idea-grad-2025"
+              >Student Spotlight</a
+            >
+          </li>
+        </ul>
+        <h2>Selected Works</h2>
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
+          <li class="footer-nav-item">
+            <a href="p1pthetemptation-1.html">The Temptation</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="p2regulusrex.html">Regulus Rex</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="p3handlebars.html">Handlebars</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="p4prophecyofthephoenix.html">Prophecy of the Phoenix</a>
+          </li>
+          <li class="footer-nav-item"><a href="about.html">About</a></li>
+        </ul>
+      </li>
+      <li class="footer-item-3">
+        <h2>Contact &amp; Social</h2>
+        <ul class="socials-list">
+          <li class="social-item">
+            <a href="https://instagram.com/sophspanart/" target="_blank"
+              >Insta</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="https://linkedin.com/in/sophiaspanosmcgill" target="_blank"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li class="footer-item-4">
+        <p><a href="#top">Smooth scroll to the top</a></p>
+        <p class="fineprint">
+          &copy; 2020-2024. Hand crafted with
+          <span class="heart">❤</span>
+          by Sophia Spanos McGill.
+        </p>
+      </li>
+    </ul>
 
-    window.addEventListener("scroll", myScrollFunc);
-  </script>
-</body>
+    <div id="myID" class="bottomMenu hide">
+      <a href="#">From the top</a>
+    </div>
+
+    <div class="flier">
+      <img
+        src="assets/branding-images/smiley-face.svg"
+        alt="Describe your image"
+      />
+    </div>
+
+    <script>
+      myID = document.getElementById("myID");
+
+      var myScrollFunc = function () {
+        var y = window.scrollY;
+        if (y >= 800) {
+          myID.className = "bottomMenu show";
+        } else {
+          myID.className = "bottomMenu hide";
+        }
+      };
+
+      window.addEventListener("scroll", myScrollFunc);
+    </script>
+  </body>
 </html>
