--- a/about.html
+++ b/about.html
@@ -22,18 +22,24 @@
   </header>
   <ul class="about">
     <li class="about-item-1">
-      <div class="about-image"><img src="assets/branding-images/sophiaspanosmcgill_heropage_illustration.jpg" width="800" height="800" alt="Your Photo">
+      <div class="about-image"><img src="assets/branding-images/_ (1).jpeg" width="800" height="800" alt="Your Photo">
       </div>
     </li>
     <li class="about-item-2">
-      <h2>Hey there!</h2>
-      <p>I'm a Vancouver-based illustrator and animation nerd. I have a knack
-        for visualizing concepts, idea generation and shape language. If
-        there’s anything I love more than art, it’s stories. I strive to
-        create narratives wherever possible, crafting a funny recounting of an
-        event for her friends, writing story concepts in coffee shops,
-        shooting the occasional short film and doodling little comics.</p>
-      <h3>Testimonials</h3>
+      <h2>Hey!</h2>
+      <br>
+      <p>I’m Sophia Spanos McGill, a Vancouver-based illustrator and animator.
+        I recently graduated from the IDEA program at Capilano University with a Bachelor of Visual Communication.
+        <br>
+        <br>
+        My jam is visually developing story-driven projects.  Classes in character and creature design, worldbuilding, and digital painting have given me the confidence to create worlds you can clearly imagine.  My side creative hustles have been learning animation and motion design. My mentorship with Andrew West of Sequence Group has amped my storyboarding and sequential storytelling skills.
+        Like many illustrators I’m an obsessive creator, starting with dragons designs, pokemon cards and lego as a kid.  I hope someday my notebooks will be worth a lot of money. 
+        <br>
+        <br>
+        My current personal projects currently include digital doodles, animated pieces, and an embarrassing amount of fan art. I balance too much screen time with almost daily doses of muay thai and jiu-jitsu. I’m one exam away from a blue belt. My other skills are making playlists and watching TV. 
+        If you have a project that may benefit from my skills and obsessions, I’d love to chat about how I might contribute. You can reach me here!
+        .</p>
+      <h2>Testimonials</h2>
       <p>&lsquo; </p>
     </li>
     <li class="about-item-3">
@@ -53,7 +59,7 @@
     </li>
     <li class="about-item-4">
       <p><a href="#top">Smooth scroll to the top</a></p>
-      <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by James Neufeld.</p>
+      <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by Sophia Spanos McGill</p>
     </li>
   </ul>
   </ul>
