--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="holding-page">
     <div class="holding-page-wrapper">
       <a href="work.html">
-        <h1 class="holding-page-title">Sophia is loading...</h1>
+        <h1 class="holding-page-title">SOPHIA IS LOADING...</h1>
       </a>
     </div>
     <div class="holding-page-footer">
