--- a/about.html
+++ b/about.html
@@ -32,18 +32,16 @@
         I recently graduated from the IDEA program at Capilano University with a Bachelor of Visual Communication.
         <br>
         <br>
-        My jam is visually developing story-driven projects.  Classes in character and creature design, worldbuilding, and digital painting have given me the confidence to create worlds you can clearly imagine.  My side creative hustles have been learning animation and motion design. My mentorship with Andrew West of Sequence Group has amped my storyboarding and sequential storytelling skills.
-        Like many illustrators I’m an obsessive creator, starting with dragons designs, pokemon cards and lego as a kid.  I hope someday my notebooks will be worth a lot of money. 
-        <br>
-        <br>
-        My current personal projects currently include digital doodles, animated pieces, and an embarrassing amount of fan art. I balance too much screen time with almost daily doses of muay thai and jiu-jitsu. I’m one exam away from a blue belt. My other skills are making playlists and watching TV. 
-        If you have a project that may benefit from my skills and obsessions, I’d love to chat about how I might contribute. You can reach me here!
-        .</p>
-      <h2>Testimonials</h2>
-      <p>&lsquo; </p>
+        My jam is visually developing story-driven projects.  Classes in character and creature design, worldbuilding, and digital painting have given me the confidence to create worlds you can clearly imagine.  My side creative hustles have been learning animation and motion design. 
+
     </li>
     <li class="about-item-3">
-      <h2>Contact &amp; Social</h2>
+      <p>
+        Like many illustrators I’m an obsessive creator, starting with dragons designs, pokemon cards and lego as a kid.My current personal projects currently include digital doodles, animated pieces, and an embarrassing amount of fan art. I balance too much screen time with almost daily doses of muay thai and jiu-jitsu.
+       <br>
+       <br>
+        If you have a project that may benefit from my skills and obsessions, I’d love to chat about how I might contribute. You can reach me here!
+        </p>
       <ul class="socials-list">
         <li class="social-item">
           <a href="https://instagram.com/sophspanart/" target="_blank"
@@ -55,6 +53,11 @@
             >LinkedIn</a
           >
         </li>
+        <li class="social-item">
+          <a href="mailto:pandorus2000@gmail.com" target="_blank"
+            >Email</a
+          >
+        </li>
       </ul>
     </li>
     <li class="about-item-4">
@@ -63,12 +66,7 @@
     </li>
   </ul>
   </ul>
-  <footer class="hero-footer">
-    <ul class="hero-footer-navigation">
-      <li><a href="#" class="custom-navigation">Instagram</a></li>
-      <li><a href="mailto:james@magnetude.com" class="custom-navigation">Email</a></li>
-    </ul>
-  </footer>
+ 
 </body>
 
 </html>
