--- a/work.html
+++ b/work.html
@@ -62,6 +62,7 @@
     <main class="work-wrapper">
       <section class="portfolio">
         <ul class="grid">
+          <h2 class="work-title">MY WORK</h2>
           <li class="work-page-grid-item">
             <figure class="image-work-page">
               <img
@@ -82,7 +83,7 @@
           <li class="work-page-grid-item">
             <figure class="image-work-page">
               <img
-                src="assets/RR/sophia-spanos-mcgill-regulus-rex-student-project-digital-illustration-project.jpg"
+                src="assets/RR/sophiaspanosmcgill_regulus_rex_medieval_turtle_concept_regulus_character_design_03.jpg"
                 class="image-animation"
                 width="1920"
                 height="1080"
