--- a/work.html
+++ b/work.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>
-      Free Creative Portfolio Template: Mar 2024 Version | Work Page
+      Sophia Spanos McGill | Home Page
     </title>
     <meta
-      name="description"
-      content="Sophia Spanos McGill - Illustration and Concept Art"
+      name="Sophia Spanos McGill | Illustration and Concept Art"
+      content="Sophia Spanos McGill is a Vancouver-based illustrator and aspiring animator. Her work consists of the visual development of story-driven projects."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,7 +38,7 @@
             <a href="index.html">
               <img
                 src="assets/branding-images/SophLogo2024.svg"
-                alt="Describe your image"
+                alt="Sophia Spanos McGill Logo"
               />
             </a>
           </li>
@@ -70,7 +70,7 @@
                 class="image-animation"
                 width="1920"
                 height="1080"
-                alt="Describe your project"
+                alt="Sophia Spanos McGill | The Temptation Character Design"
               />
             </figure>
             <a href="p1pthetemptation-1.html">
@@ -87,7 +87,7 @@
                 class="image-animation"
                 width="1920"
                 height="1080"
-                alt="Describe your project"
+                alt="Sophia Spanos McGill | Regulus Rex Character Design"
               />
             </figure>
             <a href="p2regulusrex.html">
@@ -104,7 +104,7 @@
                 class="image-animation"
                 width="1920"
                 height="1080"
-                alt="Describe your project"
+                alt="Sophia Spanos McGill | Handlebars Concept Design"
               />
             </figure>
             <a href="p3handlebars.html">
@@ -123,7 +123,7 @@
                 class="image-animation"
                 width="1920"
                 height="1080"
-                alt="Describe your project"
+                alt="Sophia Spanos McGill | Prophecy of the Phoenix Worldbuilding Concept"
               />
             </figure>
             <a href="p4prophecyofthephoenix.html">
@@ -182,7 +182,8 @@
         </ul>
       </li>
       <li class="footer-item-4">
-
+        <a class="footer-click" href="#">take it from the top!</a>
+        <br>
         <p class="fineprint">
           &copy; 2020-2024. Hand crafted with
           <span class="heart">❤</span>
@@ -191,9 +192,7 @@
       </li>
     </ul>
 
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">From the top</a>
-    </div>
+  
 
     <div class="flier">
       <img
