--- a/p3handlebars.html
+++ b/p3handlebars.html
@@ -38,7 +38,8 @@
         <div class="project-info">
           <h1 class="project-title">Handlebars</h1>
           <p class="project-description">
-            Handlebars is the visual development for a short animation concept
+            Handlebars is the visual development for a short animation concept |
+            In progress
           </p>
         </div>
 
@@ -166,13 +167,10 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          I'm a Vancouver-based illustrator and animation nerd. I have a knack
-          for visualizing concepts, idea generation and shape language. If
-          there’s anything I love more than art, it’s stories. I strive to
-          create narratives wherever possible, crafting a funny recounting of an
-          event for her friends, writing story concepts in coffee shops,
-          shooting the occasional short film and doodling little comics.
+          I'm a Vancouver-based illustrator who focusses on visual development
+          and animation.
         </p>
+        <a href="about.html"> Still curious?</a>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
@@ -191,23 +189,6 @@
             >
           </li>
         </ul>
-        <h2>Selected Works</h2>
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item">
-            <a href="p1pthetemptation-1.html">The Temptation</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="p2regulusrex.html">Regulus Rex</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="p3handlebars.html">Handlebars</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="p4prophecyofthephoenix.html">Prophecy of the Phoenix</a>
-          </li>
-          <li class="footer-nav-item"><a href="about.html">About</a></li>
-        </ul>
       </li>
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
@@ -225,7 +206,8 @@
         </ul>
       </li>
       <li class="footer-item-4">
-        <p><a href="#top">Smooth scroll to the top</a></p>
+        <a class="footer-click" href="#">take it from the top!</a>
+        <br />
         <p class="fineprint">
           &copy; 2020-2024. Hand crafted with
           <span class="heart">❤</span>
@@ -233,7 +215,6 @@
         </p>
       </li>
     </ul>
-
     <div id="myID" class="bottomMenu hide">
       <a href="#">From the top</a>
     </div>
