--- a/about.html
+++ b/about.html
@@ -60,9 +60,12 @@
         </li>
       </ul>
     </li>
-    <li class="about-item-4">
-      <p><a href="#top">Smooth scroll to the top</a></p>
-      <p class="fineprint">&copy; 2020-2024. Hand crafted with <span class="heart">❤</span> by Sophia Spanos McGill</p>
+    <li class="footer-item-4">
+      <p class="fineprint">
+        &copy; 2020-2024. Hand crafted with
+        <span class="heart">❤</span>
+        by Sophia Spanos McGill.
+      </p>
     </li>
   </ul>
   </ul>
