updating copyright and page titles

--- a/p2regulusrex.html
+++ b/p2regulusrex.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Mar 2024 Version | Project Page
-    </title>
+    <title>Sophia Spanos McGill | Regulus Rex</title>
     <meta
       name="description"
       content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
@@ -114,37 +112,9 @@
         <a class="footer-click" href="#">take it from the top!</a>
         <br />
         <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by Sophia Spanos McGill.
+          Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
         </p>
       </li>
     </ul>
-
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">From the top</a>
-    </div>
-
-    <div class="flier">
-      <img
-        src="assets/branding-images/smiley-face.svg"
-        alt="Describe your image"
-      />
-    </div>
-
-    <script>
-      myID = document.getElementById("myID");
-
-      var myScrollFunc = function () {
-        var y = window.scrollY;
-        if (y >= 800) {
-          myID.className = "bottomMenu show";
-        } else {
-          myID.className = "bottomMenu hide";
-        }
-      };
-
-      window.addEventListener("scroll", myScrollFunc);
-    </script>
   </body>
 </html>
