--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Free Creative Portfolio Template: Mar 2024 Version | About Page</title>
+  <title>Sophia Spanos McGill | About Page</title>
   <meta name="description"
     content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!">
   <meta charset="utf-8">
@@ -62,9 +62,7 @@
     </li>
     <li class="footer-item-4">
       <p class="fineprint">
-        &copy; 2020-2024. Hand crafted with
-        <span class="heart">❤</span>
-        by Sophia Spanos McGill.
+        Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
       </p>
     </li>
   </ul>
