--- a/work.html
+++ b/work.html
@@ -185,9 +185,7 @@
         <a class="footer-click" href="#">take it from the top!</a>
         <br>
         <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by Sophia Spanos McGill.
+          Copyright 2024-2025 Sophia Spanos McGill. All rights reserved.
         </p>
       </li>
     </ul>
